# pharmassist-kaggle

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  security_best_practices_report.md
apps/api/: README.md  pyproject.toml
apps/api/benchmarks/: feb11_baseline_metrics_2026-02-07.json
apps/api/src/pharmassist_api/: analysis_refresh.py  db.py  follow_up_answers.py  main.py  orchestrator.py
apps/api/tests/: test_a1_fallback_extraction.py  test_a3_followup_selector.py  test_a3_triage_followup.py  test_a4_evidence_retrieval.py  test_a5_safety_engine.py  test_a6_product_ranker.py  test_a7_a8_outputs.py  test_access_controls.py  test_case_loader.py  test_contract_examples_validate.py  test_db_path_default.py  test_db_preview_api.py  test_eval_and_replay_scripts.py  test_follow_up_answers_phi_guard.py  test_haidef_smoke_auth.py  test_haidef_smoke_canonicalization.py  test_healthz.py  test_markdown_xss_guard.py  test_no_raw_ocr_persisted.py  test_orchestrator_a1_error.py  test_orchestrator_escalation.py  test_orchestrator_follow_up_answers_guard.py  test_orchestrator_needs_more_info.py  test_orchestrator_policy_gate.py  test_patient_analysis_refresh.py  test_pharmacy_dataset.py  test_phi_boundary.py  test_phi_no_leak_surfaces.py  test_phi_scanner.py  test_planner_agentic.py  test_policy_validate_rx_advice_extended.py  test_prebrief_artifact.py  test_prescription_upload.py  test_prescription_upload_hardening.py  test_runs_api.py  test_rx_advice_lint.py  test_schema_format_validation.py  test_trace_artifact.py  test_warning_dedupe.py
(+57 files in other folders)
