[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmassist-api"
version = "0.0.0"
description = "PharmAssist Kaggle demo API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic>=2.9,<3",
  "python-dotenv>=1.0,<2"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8,<0.9",
  "pytest>=8,<9",
  "httpx>=0.27,<0.28"
]

[tool.setuptools.packages.find]
where = ["src"]
